# MachineLearning

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  makefile
.github/workflows/: ccpp.yml
GAN/: ambient.py
NeuralNetworks/: Makefile
NeuralNetworks/src/: Matrix.cpp  Matrix.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp
ex/: CMakeLists.txt  basic.cpp  basic.cpp.bk  linalg.cpp  matrices.cpp  tensors.cpp
examples/: basic.cpp
lib/src/: matrix.cpp  matrix.hpp  neural_network.cpp  neural_network.hpp
lib/src/linalg/: inversion.cpp  inversion.hpp
lib/src/utils/: printer.cpp  printer.hpp
lib/teslyn/: matrix.cpp  neural_network.cpp  neural_network.hpp
lib/teslyn/linalg/: inversion.cpp  inversion.hpp
lib/teslyn/utils/: printer.cpp  printer.hpp
src/: Matrix.hpp  NeuralNetwork.hpp  main.cpp  matrix.cpp  matrix.hpp  neural_network.cpp  neural_network.hpp
teslyn/: CMakeLists.txt  teslyn.hpp
teslyn/core/: matrix.cpp  matrix.hpp  neural_network.cpp  neural_network.hpp  tensor.cpp  tensor.hpp
teslyn/linalg/: inversion.cpp  inversion.hpp
teslyn/utils/: instrumentation.hpp  log.cpp  log.hpp  printer.cpp  printer.hpp  timer.cpp  timer.hpp
test/: CMakeLists.txt  makefile
test/include/: utils.hpp
test/src/: display.cpp  matrix.cpp  neural_network.cpp  tensor.cpp
